--- a/static/css/site.css
+++ b/static/css/site.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Caveat:wght@400;700&family=Montserrat:ital,wght@0,400;0,500;1,300&display=swap');
+
 @tailwind base;
 
 @tailwind components;
